Fix errors and modify styles

--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -2,6 +2,9 @@ musikisum/educandu-plugin-progression-models:
   name:
     en: Voice-Models
     de: Satzmodelle
+  noModel:
+    en: Add a progression model ...
+    de: Füge ein Satzmodell hinzu ...
   modelKey: 
     en: Begin
     de: Beginn  
@@ -260,9 +263,6 @@ musikisum/educandu-plugin-progression-models:
   transposeToolTip:
     en: Transpose
     de: Transponieren
-  withTies:
-    en: 2 → 1
-    de: 2 → 1
   withTiesToolTip:
     en: Replacing repetitions with double note values or ties
     de: Ersetzt Tonwiederholungen durch größere Notenwerte bzw. Überbindungen 
