Expand circle of fifths linear

--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -138,8 +138,8 @@ musikisum/educandu-plugin-progression-models:
     en: Root position
     de: Grundstellung
   lastBassNoteUp:
-    en: ending ↑
-    de: Abschluss ↑
+    en: Ending ↑
+    de: Schluss ↑
   isDeceptiv:
     en: deceptiv
     de: Trugschluss
