Move github workflow files

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -34,13 +34,13 @@ jobs:
           - 8000:8000
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3.2.0
+        uses: actions/checkout@v4.2.1
         with:
           fetch-depth: 0
       - name: Install node
-        uses: actions/setup-node@v3.5.1
+        uses: actions/setup-node@v4.0.4
         with:
-          node-version: "18.12.1"
+          node-version: "20.17.0"
           cache: "yarn"
       - name: Install node modules
         run: yarn install --non-interactive --check-files --frozen-lockfile
@@ -51,6 +51,8 @@ jobs:
       - name: Build
         run: ./node_modules/.bin/gulp build
       - name: Codecov
-        uses: codecov/codecov-action@v3.1.1
+        uses: codecov/codecov-action@v4.6.0
         with:
           files: ./coverage/coverage-final.json
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
